--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@ HTML
 <body>
   <h1>Веб-сторінка</h1>
   <p>Це тестовий текст.</p>
+
+  **Нова форма зв'язку:**
+  <section id="contact">
+    <h2>Зв'яжіться з нами</h2>
+    <form action="/contact" method="post">
+      <label for="name">Ваше ім'я:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Ваш email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Ваше повідомлення:</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">Відправити</button>
+    </form>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
